create our information and contact pag

--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -28,9 +28,9 @@
 									<span class="lnr lnr-home"></span>
 								</div>
 								<div class="contact-details">
-									<h5>Binghamton, New York</h5>
+									<h5>{{ ourInformation.address }}</h5>
 									<p>
-										4343 Hinkle Deegan Lake Road
+										{{ ourInformation.address_description }}
 									</p>
 								</div>
 							</div>
@@ -39,8 +39,8 @@
 									<span class="lnr lnr-phone-handset"></span>
 								</div>
 								<div class="contact-details">
-									<h5>00 (958) 9865 562</h5>
-									<p>Mon to Fri 9am to 6 pm</p>
+									<h5>{{ ourInformation.tell }}</h5>
+									<p>{{ ourInformation.tell_description }}</p>
 								</div>
 							</div>
 							<div class="single-contact-address d-flex flex-row">
@@ -48,8 +48,8 @@
 									<span class="lnr lnr-envelope"></span>
 								</div>
 								<div class="contact-details">
-									<h5>support@colorlib.com</h5>
-									<p>Send us your query anytime!</p>
+									<h5>{{ ourInformation.email }}</h5>
+									<p>{{ ourInformation.email_description }}</p>
 								</div>
 							</div>														
 						</div>
