--- a/templates/base.html
+++ b/templates/base.html
@@ -67,14 +67,14 @@
 				</div>
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
+				      <div >
+				        <a href="{% url 'website:home' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
 				          <li><a href="{% url 'website:home' %}">Home</a></li>
 				          <li><a href="{% url 'website:about' %}">About</a></li>
-				          <li  class="menu-has-children" ><a href="{%  url 'blog:inndex' %}">Blog</a></li>
+				          <li ><a href="{%  url 'blog:inndex' %}">Blog</a></li>
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				            	  <li><a href="elements.html">Elements</a></li>
@@ -115,7 +115,7 @@
 								<div class="row">
 									<div class="col">
 										<ul>
-											<li><a href="#">Home</a></li>
+											<li><a href="{% url 'website:home' %}">Home</a></li>
 											<li><a href="#">Feature</a></li>
 											<li><a href="#">Services</a></li>
 											<li><a href="#">Portfolio</a></li>
@@ -125,8 +125,8 @@
 										<ul>
 											<li><a href="#">Team</a></li>
 											<li><a href="#">Pricing</a></li>
-											<li><a href="#">Blog</a></li>
-											<li><a href="#">Contact</a></li>
+											<li><a href="{% url 'blog:inndex' %}">Blog</a></li>
+											<li><a href="{% url 'website:contact' %}">Contact</a></li>
 										</ul>
 									</div>
 								</div>
