--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -3,14 +3,13 @@
 {%  load blog_tags %}
 {% block content %}
 			<!-- start banner Area -->
-			<section class="banner-area relative blog-home-banner" id="home">	
+			<section class="banner-area relative blog-home-banner" id="home">
 				<div class="overlay overlay-bg"></div>
 				<div class="container">				
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content blog-header-content col-lg-12">
 							<h1 class="text-white">
-								Dude You’re Getting
-								a Telescope				
+								Walk on the path of becoming God
 							</h1>	
 							<p class="text-white">
 								There is a moment in the life of any aspiring astronomer that it is time to buy that first
@@ -31,12 +30,12 @@
 									<div class="overlay overlay-bg"></div>
 								    <a href="#" target="_blank">
 								      <div class="thumb">
-								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/cat-widget1.jpg'%}" alt="">
+								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/js-wallpaper.jpg'%}" alt="">
 								  	  </div>
 								      <div class="content-details">
-								        <h4 class="content-title mx-auto text-uppercase">Social life</h4>
+								        <h4 class="content-title mx-auto text-uppercase">JavaScript</h4>
 								        <span></span>								        
-								        <p>Enjoy your social life together</p>
+								        <p>Enjoy your programing life</p>
 								      </div>
 								    </a>
 								</div>
@@ -48,12 +47,12 @@
 									<div class="overlay overlay-bg"></div>
 								    <a href="#" target="_blank">
 								      <div class="thumb">
-								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/cat-widget2.jpg'%}" alt="">
+								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/react-wallpaper.jpg'%}" alt="">
 								  	  </div>
 								      <div class="content-details">
-								        <h4 class="content-title mx-auto text-uppercase">Politics</h4>
+								        <h4 class="content-title mx-auto text-uppercase">react</h4>
 								        <span></span>								        
-								        <p>Be a part of politics</p>
+								        <p>power and fast</p>
 								      </div>
 								    </a>
 								</div>
@@ -65,12 +64,12 @@
 									<div class="overlay overlay-bg"></div>
 								    <a href="#" target="_blank">
 								      <div class="thumb">
-								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/cat-widget3.jpg'%}" alt="">
+								  		 <img class="content-image img-fluid d-block mx-auto" src="{% static 'img/blog/python-wallpaper.jpg'%}" alt="">
 								  	  </div>
 								      <div class="content-details">
-								        <h4 class="content-title mx-auto text-uppercase">Food</h4>
+								        <h4 class="content-title mx-auto text-uppercase">python</h4>
 								        <span></span>
-								        <p>Let the food be finished</p>
+								        <p>The future is under your control</p>
 								      </div>
 								    </a>
 								</div>
@@ -108,7 +107,7 @@
 									</div>
 									<a class="posts-title" href="{% url 'blog:single' post_id=post.id  %}"><h3>{{ post.title }}</h3></a>
 									<p class="excert">
-									{{ post.content|truncatechars:200 }}
+									{{ post.content|truncatechars:200|safe }}
                                     </p>
 									<a href="{% url 'blog:single' post_id=post.id  %}" class="primary-btn">View More</a>
 								</div>
@@ -119,70 +118,14 @@
 						<div class="col-lg-4 sidebar-widgets">
 							<div class="widget-wrap">
                                 {%  include 'blog/include/blog-search.html' %}
-								<div class="single-sidebar-widget user-info-widget">
-									<img src="{% static 'img/blog/user-info.png' %}" alt="">
-									<a href="#"><h4>Charlie Barber</h4></a>
-									<p>
-										Senior blog writer
-									</p>
-									<ul class="social-links">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-github"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-									</ul>
-									<p>
-										Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-									</p>
-								</div>
+								{% include 'blog/include/blog-user-info.html' %}
 								{% latestposts %}
 
 
-								<div class="single-sidebar-widget ads-widget">
-									<a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg'%}" alt=""></a>
-								</div>
-
 								{% postCategories %}
+                                {% include 'blog/include/blog-all-tags.html' %}
 
-								<div class="single-sidebar-widget newsletter-widget">
-									<h4 class="newsletter-title">Newsletter</h4>
-									<p>
-										Here, I focus on a range of items and features that we use in life without
-										giving them a second thought.
-									</p>
-									<div class="form-group d-flex flex-row">
-									   <div class="col-autos">
-									      <div class="input-group">
-									        <div class="input-group-prepend">
-									          <div class="input-group-text"><i class="fa fa-envelope" aria-hidden="true"></i>
-											</div>
-									        </div>
-									        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'" >
-									      </div>
-									    </div>
-									    <a href="#" class="bbtns">Subcribe</a>
-									</div>	
-									<p class="text-bottom">
-										You can unsubscribe at any time
-									</p>								
-								</div>
-								<div class="single-sidebar-widget tag-cloud-widget">
-									<h4 class="tagcloud-title">Tag Clouds</h4>
-									<ul>
-										<li><a href="#">Technology</a></li>
-										<li><a href="#">Fashion</a></li>
-										<li><a href="#">Architecture</a></li>
-										<li><a href="#">Fashion</a></li>
-										<li><a href="#">Food</a></li>
-										<li><a href="#">Technology</a></li>
-										<li><a href="#">Lifestyle</a></li>
-										<li><a href="#">Art</a></li>
-										<li><a href="#">Adventure</a></li>
-										<li><a href="#">Food</a></li>
-										<li><a href="#">Lifestyle</a></li>
-										<li><a href="#">Adventure</a></li>
-									</ul>
-								</div>								
+
 							</div>
 						</div>
 					</div>
