--- a/templates/blog/include/blog-writer.html
+++ b/templates/blog/include/blog-writer.html
@@ -1,9 +1,9 @@
 {%  load static %}
 <div class="single-sidebar-widget user-info-widget">
-    <img src="{%static 'img/blog/user-info.png' %}" alt="">
-    <a href="#"><h4>Charlie Barber</h4></a>
+    <img style="border-radius: 100%; width: 100px;" src="{{ account.image.url }}" alt="">
+    <a href="#"><h4>{{ account.author }}</h4></a>
     <p>
-        Senior blog writer
+        {#{{ account.bio }}#}
     </p>
     <ul class="social-links">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -12,6 +12,5 @@
         <li><a href="#"><i class="fa fa-behance"></i></a></li>
 	</ul>
 	<p>
-		Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-	</p>
+		{{ account.bio }}	</p>
 </div>
