--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -21,7 +21,17 @@
 			<section class="contact-page-area section-gap">
 				<div class="container">
 					<div class="row">
-						<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
+
+{#						<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>#}
+
+
+                <div class="map-wrap" style="width:100%;height: 445px;" id="">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d809.9989374920164!2d51.488716028547714!3d35.70172219827914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQyJzA2LjIiTiA1McKwMjknMjEuNyJF!5e0!3m2!1sen!2s!4v1690211453863!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+
+
+
 						<div class="col-lg-4 d-flex flex-column address-wrap">
 							<div class="single-contact-address d-flex flex-row">
 								<div class="icon">
@@ -60,4 +70,21 @@
 				</div>	
 			</section>
 			<!-- End contact-page Area -->
+
+
+
+{#                        <script>#}
+{#                    function myMap() {#}
+{#                    var mapProp= {#}
+{#                      center:new google.maps.LatLng(51.508742,-0.120850),#}
+{#                      zoom:5,#}
+{#                    };#}
+{#                    var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);#}
+{#                    }#}
+{#                    </script>#}
+{##}
+{#                    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>#}
+
+
+
 {% endblock %}
